<resources>
    <string name="app_name">ADZ English</string>
    <string name="txt_language">Language</string>
    <string name="txt_content_1">Cùng khởi tạo kế hoạch học tập cá nhân nào</string>
    <string name="txt_lets_go">Đi thôi</string>
    <string name="txt_title_2">Trình độ Tiếng Anh của bạn ở mức nào?</string>
    <string name="txt_tourism">Để thoải mái du lịch</string>
    <string name="txt_continue">Tiếp tục</string>
    <string name="txt_title_3">Tuyệt, chúng tôi sẽ giúp bạn</string>
    <string name="txt_content">Chúng tôi sẽ chọn các câu chuyện giúp bạn cải thiện kỹ năng đọc và nghe của bạn</string>
    <string name="txt_content_2">Học thêm nhiều từ thuộc các chủ đề: “Cơ bản”, “Công việc hằng ngày”</string>
    <string name="txt_title_4">Từng bước lĩnh hội mọi quy tắc ngữ pháp</string>
    <string name="txt_title_5">Tiến bộ trong các kĩ năng đọc và nghe</string>
    <string name="txt_congratulations">Chúc mừng</string>
    <string name="txt_content_3">Kế hoạch học tập cá nhân của bạn đã được khởi tạo thành công</string>
    <string name="txt_title_6">Đây sẽ là chủ đề chúng tôi đề xuất dựa trên các câu trả lời của bạn</string>
    <string name="txt_all_topic">Xem tất cả các chủ đề</string>
    <string name="txt_start">Bắt đầu</string>
    <string name="title_intro_nine">Đang thiết lập kế hoạch học tập cá nhân</string>
    <string name="txt_intro_eigth">Thiết lập mục tiêu</string>
    <string name="txt_5p">5 phút mỗi ngày</string>
    <string name="txt_10p">10 phút mỗi ngày</string>
    <string name="txt_15p">15 phút mỗi ngày</string>
    <string name="txt_30p">30 phút mỗi ngày</string>
    <string name="txt_5">Từ từ thôi</string>
    <string name="txt_10">Tự tin ghê</string>
    <string name="txt_15">Quyết tâm đó</string>
    <string name="txt_30">Ghê à nha</string>
    <string name="txt_open_chest">Mở rương thử vận may</string>
    <string name="txt_from">1650 từ</string>
    <string name="txt_come_here">Đến đây</string>
    <string name="contentDesc_btn_previous">button_previous</string>
    <string name="contentDesc_btn_next">button_next</string>
    <string name="start_learn_this_lesson">Bắt đầu thôi</string>
    <string name="start">Bắt đầu</string>
    <string name="button_setting">button_setting</string>
    <string name="button_rank">button_rank</string>
    <string name="button_practice">button_practice</string>
    <string name="button_home">button_home</string>
    <string name="txt_check">Kiểm tra bản thân</string>
    <string name="txt_do_not_open">Không mở</string>
    <string name="txt_choose">Chọn bản dịch đúng</string>
    <string name="txt_come_back">Trở về</string>
    <string name="txt_next">Tiếp theo</string>
    <string name="txt_feed_back_sound">Âm thanh không chính xác</string>
    <string name="txt_translation">Bản dịch không chính xác</string>
    <string name="txt_answer">Đáp án của tôi đã chính xác</string>
    <string name="txt_error_report">Báo cáo lỗi</string>
    <string name="txt_close">Đóng</string>
    <string name="txt_comment">Nội dung</string>
    <string name="txt_assessing_lang_learn">Đánh giá việc học ngôn ngữ</string>
    <string name="choose_level">Chọn cấp độ</string>
    <string name="txt_select_word">Chọn từ vựng để ôn lại sau</string>
    <string name="txt_not_add_word">Đừng thêm từ</string>
    <string name="txt_close_select">Hủy lựa chọn</string>
    <string name="txt_select_all">Chọn tất cả các từ</string>
    <string name="txt_great">Tuyệt vời</string>
    <string name="txt_word_new">Từ vựng mới</string>
    <string name="txt_content_word">Ghi nhớ từ vựng mãi mãi với kho hình ảnh minh họa của chúng tôi</string>
    <string name="txt_select">Chọn bản dịch</string>
    <string name="txt_input_translate">Nhập vào bản dịch</string>
    <string name="txt_helper">Trợ giúp</string>
    <string name="txt_true_answer">Chính xác</string>
    <string name="txt_right_answer">Câu trả lời đúng</string>
    <string name="txt_open_chest1">Mở rương</string>
    <string name="txt_forecast">Đoán xem hôm nay chúng ta sẽ học chủ đề gì nào</string>
    <string name="txt_note">Lưu ý: Bạn sẽ mất tiến trình của mình nếu bạn bỏ lỡ hoạt động thực hành ngày mai</string>
    <string name="txt_practical_lessons">Bài học thực hành</string>
    <string name="txt_content_lessons">I work here</string>
    <string name="txt_review_word">Ôn lại các từ</string>
    <string name="txt_collection">Bộ sưu tập của bạn</string>
    <string name="txt_word">Từ</string>
    <string name="txt_rule">Quy tắc</string>
    <string name="txt_today">Hôm nay</string>
    <string name="txt_new_word">Từ mới</string>
    <string name="txt_word_review">Từ đã ôn tập</string>
    <string name="txt_new_rules">Quy tắc ngữ pháp mới</string>
    <string name="txt_practice_rules">Quy tắc ngữ pháp đã thực hành</string>
    <string name="txt_new_grammar">Ngữ pháp mới</string>
    <string name="txt_content_grammar">Hiểu rõ ngữ pháp nhanh chóng với các công thức của chúng tôi</string>
    <string name="txt_finish">Bài tập hoàn tất!</string>
    <string name="txt_desc_finish">Hãy cố gắng hoàn thành bài tập với kết quả tốt hơn</string>
    <string name="txt_level">Cấp độ</string>
    <string name="txt_new_soldier">Dành cho lính mới</string>
    <string name="txt_furthermore">Thử thách hơn nữa</string>
    <string name="txt_pro_level">Trình độ pro</string>
    <string name="txt_genius">Dành cho thiên tài</string>
    <string name="txt_series_of_days">Chuỗi ngày</string>
    <string name="txt_total_word">Tổng số từ vựng</string>
    <string name="txt_review">Ôn tập</string>
    <string name="txt_add_word_new">Thêm từ mới</string>
    <string name="txt_daily_chest">Rương hằng ngày</string>
    <string name="txt_total_word_new">10 từ mới</string>
    <string name="txt_open">Mở</string>
    <string name="txt_story">Câu chuyện</string>
    <string name="txt_lessons">Bài học</string>
    <string name="txt_title_lessons">Động từ be: câu nghi vấn và câu phủ định trong quá khứ</string>
    <string name="txt_check_lessons">Kiểm tra</string>
    <string name="txt_studying">Đang học</string>
    <string name="txt_transplant_from">Ghép từ tương ứng</string>
    <string name="txt_so_good">Quá đã</string>
    <string name="txt_win">Xuất sắc! Bạn hiểu toàn bộ các từ!</string>
    <string name="txt_exit">Thoát</string>
    <string name="txt_remind">Nhắc nhở</string>
    <string name="txt_sound">Hiệu ứng âm thanh</string>
    <string name="txt_evaluate">Đánh giá</string>
    <string name="txt_anonymous_user">Nguời dùng ẩn danh</string>
    <string name="txt_time">19:00</string>
    <string name="txt_contact">Liên hệ</string>
    <string name="txt_delete">Xóa tài khoản</string>
    <string name="txt_edit_level">Bạn có muốn thay đổi cấp độ của mình không?</string>
    <string name="txt_confirm">Xác nhận</string>
    <string name="txt_like_app">Do you like the app?</string>
    <string name="txt_content_rate">Let us know your experience</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_title_delete">Bạn chắc chắn muốn xóa tài khoản?</string>
    <string name="txt_content_delete">Tất cả dữ liệu bài học bạn đã làm sẽ bị xóa vĩnh viễn và không thể khôi phục</string>
    <string name="txt_cancel">HỦY</string>
    <string name="txt_delete_account">Xóa</string>
    <string name="txt_edit">Chỉnh sửa</string>
    <string name="txt_edit_account">Thay đổi ảnh hồ sơ</string>
    <string name="txt_name_account">Tên tài khoản:</string>
    <string name="txt_save">Save</string>
    <string name="txt_take_photo">Chụp một ảnh</string>
    <string name="txt_choose_library">Chọn từ thư viện</string>
    <string name="txt_cancel_dialog">Hủy</string>
    <string name="anonymous_users">Người dùng ẩn danh</string>
    <string name="txt_disable">Vô hiệu hóa</string>
    <string name="txt_title_box">Lĩnh vực nào đòi hỏi bạn phải ưu tiên vốn từ vựng trước?</string>
    <string name="email">haonguyen@smartwave247.com</string>
    <string name="send_email"> getString(R.string.send_email)</string>
    <string name="txt_en">En</string>
    <string name="txt_vi">Vi</string>
    <string name="txt_choose_correct">Chọn bản dịch đúng</string>
    <string name="txt_15_gold">15</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="title_notifi">Bạn ơi đã đến giờ học tiếng Anh rồi !</string>
    <string name="txt_create_a_phrase">Tạo một cụm từ</string>
    <string name="txt_content_practice">Học cách chọn ra hình thức từ chính xác một cách nhanh chóng</string>
    <string name="txt_fill_in_the_blank">Điền vào chỗ trống</string>
    <string name="txt_choose_topic">Chọn chủ đề</string>
    <string name="txt_content_topic">Và nhận rương chứa từ vựng mới \nmỗi ngày</string>
    <string name="txt_detective_stories">Những câu chuyện trinh thám</string>
    <string name="txt_content_story">Chọn vụ án và cải thiện kỹ năng đọc - nghe của bạn</string>
    <string name="txt_universe">Message from the universe</string>
    <string name="txt_content_universe">Cố gắng hết khả năng để chiến thắng cuộc thi và nhận vé lên vũ trụ nào</string>
    <string name="txt_begin">Bắt đầu</string>
    <string name="txt_add_profile_photo">Thêm ảnh hồ sơ</string>
    <string name="txt_reward_no">Tiếp tục và không nhận thưởng</string>
    <string name="txt_add_photo">Thêm ảnh và nhận thưởng</string>
    <string name="txt_content_add_profile">Càng kiếm được nhiều Unicoin bạn sẽ càng có vị trí cao hơn trong bảng điểm!</string>
    <string name="txt_add_name">Thêm tên người dùng</string>
    <string name="txt_create_name">Tạo một cái tên độc nhất để thi đua với những người khác</string>
    <string name="txt_enter_name">Nhập tên của bạn</string>
    <string name="txt_charts">Bảng xếp hạng</string>
    <string name="txt_10_gold">+10</string>
    <string name="txt_error">Có lỗi sảy ra , vui lòng chọn ảnh khác rồi thử lại!</string>
    <string name="txt_internet">Tính năng cần sử dụng internet!</string>
    <string name="txt_get_more_uni_coin">Kiếm tối thiểu</string>
    <string name="txt_collect_uni_coins">Thu thập Unicoin</string>
    <string name="txt_escape">Bạn có muốn thoát?</string>
    <string name="txt_progress_reset">Tiến trình hiện tại sẽ bị mất</string>
    <string name="txt_continue_learning">Tiếp tục học</string>
    <string name="txt_Leave">Rời đi sớm vậy?</string>
    <string name="txt_practice_more">Bạn có muốn thực hành thêm không?</string>
    <string name="txt_yes_practice">Thực hành thêm</string>
    <string name="txt_summary">Tóm tắt</string>
    <string name="txt_find_out_more">Tìm hiểu thêm</string>
    <string name="txt_known">Cho đến giờ bạn đã biết gì?</string>
    <string name="txt_correct">Đúng</string>
    <string name="txt_wrong">Sai</string>
    <string name="txt_mission">Nhiệm vụ hoàn thành!</string>
    <string name="txt_speed_1x">1X</string>
    <string name="txt_speed_0.7x">0.7X</string>
    <string name="txt_speed_0.5x">0.5X</string>
    <string name="txt_read_word">Đọc từ</string>
    <string name="txt_read_text">Đọc hiểu văn bản</string>
    <string name="txt_egg_filling">Phỏng vấn nhân chứng</string>
    <string name="txt_grammar">Ngữ pháp của bạn</string>
    <string name="txt_instruct">Hướng dẫn</string>
    <string name="txt_desc_sup">Kéo vào ô bên trên để hoàn thành</string>
    <string name="txt_check_answer">Kiểm tra</string>
    <string name="txt_practice">Thực hành</string>
    <string name="txt_desc_content_practice">Biến kiến thức thành phản xạ với các bài tập của chúng tôi</string>
    <string name="txt_input_answer">Nhập câu trả lời của bạn</string>
    <string name="txt_quick_task">Thực hành nhanh</string>
    <string name="txt_example">Ví dụ:</string>
    <string name="txt_no_data">Chưa có gì ở đây</string>
    <string name="txt_turn_on_sound">Bật âm thanh</string>
    <string name="txt_vocabulary">Từ vựng</string>
</resources>