<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutChoosePartLearn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bgr_choose_part_learn_again"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20dp">

    <TextView
        android:id="@+id/tvVocabulary"
        style="@style/TextChoosePartLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_vocabulary" />

    <TextView
        android:id="@+id/tvGrammar"
        style="@style/TextChoosePartLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8dp"
        android:text="@string/txt_grammar" />

    <TextView
        android:id="@+id/tvPractice"
        style="@style/TextChoosePartLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/txt_practice" />
</LinearLayout>