<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30dp"
        android:fontFamily="@font/plusjakartasans_bold"
        android:gravity="center"
        android:text="@string/txt_intro_eigth"
        android:textColor="@color/blue_01"
        android:textSize="@dimen/_24sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    android:layout_marginTop="@dimen/_15dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_16dp">

        <LinearLayout
            android:id="@+id/lnOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_20dp"
                android:text="@string/txt_5p"
                android:textColor="@color/blue_01"
                android:textSize="@dimen/_16sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_5"
                android:layout_marginEnd="@dimen/_16dp"
                android:textColor="@color/gray_01"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16dp">

        <LinearLayout
            android:id="@+id/lnTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_20dp"
                android:text="@string/txt_10p"
                android:textColor="@color/blue_01"
                android:textSize="@dimen/_16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/txt_10"
                android:textColor="@color/gray_01"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16dp">

        <LinearLayout
            android:id="@+id/lnThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_20dp"
                android:text="@string/txt_15p"
                android:textColor="@color/blue_01"
                android:textSize="@dimen/_16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/txt_15"
                android:textColor="@color/gray_01"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16dp">

        <LinearLayout
            android:id="@+id/lnFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_20dp"
                android:text="@string/txt_30p"
                android:textColor="@color/blue_01"
                android:textSize="@dimen/_16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/txt_30"
                android:textColor="@color/gray_01"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvContinue"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_text_continue"
        android:text="@string/txt_continue"
        android:textColor="@color/gray_02" />
</LinearLayout>